fixed translation of sponsor form and fixed some layout issue (#68)

--- a/camper/less/admin.less
+++ b/camper/less/admin.less
@@ -380,6 +380,10 @@ form {
 // sponsor edit page
 //
 
+#sponsor-form {
+    margin-bottom: 130px;
+}
+
 #admin-sponsors {
     .list-unstyled;
     padding-bottom: 80px;
@@ -387,6 +391,7 @@ form {
         height: 180px;
     }
 }
+
 .sponsor.action-container {
     .row;
     .sponsor-image {
